# docs/swagger.yaml
@@ -4,7 +4,7 @@ info:
   description: A collection of API endpoints built for the Boilerplat RestApi Platform 3.0
   version: 2.0.0
 servers:
-  - url: http://localhost:3090/api/v1
+  - url: http://localhost:8080/api/v1
     description: Local dev server
 tags:
   - name: Authorization
@@ -37,19 +37,17 @@ components:
       properties:
         firstName:
           type: string
-        middleName:
-          type: string
         lastName:
           type: string
         email:
           type: string
           format: email
-        birthDate:
+        dob:
           type: string
           format: date
-        sex:
+        gender:
           type: string
-        contactMethod:
+        streetAddress:
           type: string
         password:
           type: string
@@ -67,13 +65,13 @@ components:
         - firstName
         - lastName
         - email
-        - sex 
+        - gender 
         - password
         - confirmPassword
         - city
         - state
         - zipCode
-        - contactMethod
+        - streetAddress
       example: 
         firstName: John
         middleName: 
@@ -85,8 +83,8 @@ components:
         state: California(CA)
         zipCode: 90001
         birthDate: '1998-03-11'
-        sex: Male
-        contactMethod: Email
+        gender: M
+        streetAddress: email
     User:
       type: object
       properties:
@@ -103,9 +101,9 @@ components:
           format: email
         birthDate:
           type: date
-        sex:
+        gender:
           type: string
-        contactMethod:
+        streetAddress:
           type: string
         password:
           type: string
@@ -122,7 +120,6 @@ components:
       example: 
         id: 1
         firstName: John
-        middleName: 
         lastName: Smith
         email: johnsmith@gmail.com
         password: Admin123
@@ -130,11 +127,11 @@ components:
         city: Los Angeles
         state: California(CA)
         zipCode: 90001
-        birthDate: '1998-03-11'
-        sex: Male
-        contactMethod: Email
+        dob: '1998-03-11'
+        gender: M
+        streetAddress: Los Angeles, California
 paths:
-  /auth/login:
+  /auth/signin:
     post:
       tags: 
         - Authorization
